2008-10-30  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/plugs/rrd.py:
	  Various style cleanups, logging changes, translation.

2008-10-30  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/producers/audiotest/audiotest.py:
	There was no check on the elements' existence.
	This would cause, if there was for example no level, the only
	error reported to be a failure in providing master clock.

2008-10-29  Johan Dahlin  <johan@flumotion.com>

	* flumotion/ui/wizard.py:
	Document WizardStep & SectionWizard.
	Make ui elements only used by section wizard private
	to avoid other modules importing them.

2008-10-29  Jan Urbanski  <jurbanski@flumotion.com>

	* flumotion/component/bouncers/icalbouncer.py:

	Fix a typo described in #1173. Use UTC time instead of local time for
	comparisions (the attempt at using local time was broken anyway, as it
	caused an import error).

2008-10-26  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/test/test_common_eventcalendar.py:
	  Add a test that shows the length of an event spanning a
	  daylight savings time change is correct.
	  Remove an assert that fails only during winter time due to
	  a possible bug in python-iCalendar; see
	  https://thomas.apestaart.org/thomas/trac/browser/tests/icalendar/

2008-10-24  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/common/messages.py:
	  also log debug if it's there.
	* flumotion/component/consumers/disker/disker.py:
	* flumotion/component/combiners/switch/switch.py:
	* flumotion/component/bouncers/icalbouncer.py:
	  Use calendar to get event instances.
	  Change to use eventInstanceStarted/Ended callbacks.
	* flumotion/component/base/scheduler.py:
	  Based on the mtime of a previous recording, decide whether to
	  overwrite (if it was part of a previous event) or change filename
	  (if it is part of the current event).
	  Add a simple duration check to the rescheduling, and complain