@@ -1,6 +1,12 @@
 2008-10-30  Thomas Vander Stichele  <thomas at apestaart dot org>
 
 	* flumotion/component/plugs/rrd.py:
+	  camelcasing, privatizing, variable renaming, commenting,
+	  logging changes.
+
+2008-10-30  Thomas Vander Stichele  <thomas at apestaart dot org>
+
+	* flumotion/component/plugs/rrd.py:
 	  Various style cleanups, logging changes, translation.
 
 2008-10-30  Zaheer Abbas Merali  <zaheerabbas at merali dot org>
